import { Appointment, Customer, Packet } from "@models";
import { PurchaseDto } from "@models/dtos";

export interface Course {
  id: number;
  name: string;
  categoryId: number;
}
